--- a/pages/published.html
+++ b/pages/published.html
@@ -21,7 +21,7 @@
 <table>
     <tr valign="top">
         <td id="numerito">[3]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="http://www.ing-mat.udec.cl/~raraya"  target="_blank">R. Araya</a>, <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a> and <b>P. Vega</b>: <a href="https://www.sciencedirect.com/science/article/pii/S0168927419301898" target="_blank"><em>A posteriori error analysis of an HDG method for the Oseen problem</em></a>. <b>Applied Numerical Mathematics</b>, vol. 146, pp. 291-308, (2019).</td>
+        <td align="justify"><a href="http://www.ing-mat.udec.cl/~raraya"  target="_blank">R. Araya</a>, <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a> and <b>P. Vega</b>: <a href="https://www.sciencedirect.com/science/article/pii/S0168927419301898" target="_blank"><em>A posteriori error analysis of an HDG method for the Oseen problem</em></a>. <b>Applied Numerical Mathematics</b>, vol. 146, pp. 291-308 (2019).</td>
     </tr>
 </table>
 
@@ -30,7 +30,7 @@
 <table>
     <tr valign="top">
         <td id="numerito">[2]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="http://www.ing-mat.udec.cl/~raraya"  target="_blank">R. Araya</a>, <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a> and <b>P. Vega</b>: <a href="https://academic.oup.com/imajna/article-abstract/39/3/1502/5032331" target="_blank"><em>Analysis of an adaptive HDG method for the Brinkman problem</em></a>. <b>IMA Journal of Numerical Analysis</b>, vol. 39, 3, pp. 1502-1528, (2019).</td>
+        <td align="justify"><a href="http://www.ing-mat.udec.cl/~raraya"  target="_blank">R. Araya</a>, <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a> and <b>P. Vega</b>: <a href="https://academic.oup.com/imajna/article-abstract/39/3/1502/5032331" target="_blank"><em>Analysis of an adaptive HDG method for the Brinkman problem</em></a>. <b>IMA Journal of Numerical Analysis</b>, vol. 39, 3, pp. 1502-1528 (2019).</td>
     </tr>
 </table>
 
@@ -39,7 +39,7 @@
 <table>
     <tr valign="top">
         <td id="numerito">[1]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="http://www6.cityu.edu.hk/ma/people/profile/qiuf.htm" target="_blank">W. Qiu</a>, <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a> and <b>P. Vega</b>: <a href="https://link.springer.com/article/10.1007/s10915-016-0239-0" target="_blank"><em>A high order HDG method for curved-interface problems via approximation from straight triangulations</em></a>. <b>Journal of Scientific Computing</b>, vol. 69, 3, pp. 1384-1407, (2016).</td>
+        <td align="justify"><a href="http://www6.cityu.edu.hk/ma/people/profile/qiuf.htm" target="_blank">W. Qiu</a>, <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a> and <b>P. Vega</b>: <a href="https://link.springer.com/article/10.1007/s10915-016-0239-0" target="_blank"><em>A high order HDG method for curved-interface problems via approximation from straight triangulations</em></a>. <b>Journal of Scientific Computing</b>, vol. 69, 3, pp. 1384-1407 (2016).</td>
     </tr>
 </table>
 
