--- a/pages/home.html
+++ b/pages/home.html
@@ -34,7 +34,7 @@
             <br>Electromagnetism</p><br>
             
         <h1>Contact</h1>
-            <p>email: patrick.vega@inria.fr</p><br>
+            <p>email: patrick.vega (at) inria.fr</p><br>
            
    
 <!--         <h1>Current Position</h1>
