--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	    </ul>
             </li>
             <!--<li><a href="#" onclick="frames(6)">Talks</a></li>-->
-		<li><a href="https://scholar.google.cl/citations?user=SLd6rfIAAAAJ&hl=en" target="_blank">Scholar</a></li>
+		<li><a href="https://scholar.google.cl/citations?user=SLd6rfIAAAAJ&hl=en" target="_blank">Google Scholar</a></li>
 		<li><a href="https://www.ams.org/mathscinet/MRAuthorID/1186722" target="_blank">MathSciNet</a></li>
 		<li><a href="https://www.researchgate.net/profile/Patrick_Vega5" target="_blank">RG</a></li>
             <!--<li><a>Projects</a>
