--- a/pages/home.html
+++ b/pages/home.html
@@ -38,7 +38,7 @@
             <br>Inria Sophia Antípolis - Méditerranée
             <br>2004 Route des Lucioles, BP 93
             <br>06902 Sophia Antípolis Cedex, France
-            <br>email: patrick.vega (at) inria.fr</p><br>
+            <br>email: patrick.vega[at]inria.fr</p><br>
            
    
 <!--         <h1>Current Position</h1>
