--- a/pages/submitted.html
+++ b/pages/submitted.html
@@ -21,7 +21,7 @@
 
 <table>
     <tr valign="top">
-        <td id="numerito”>[1]&nbsp;&nbsp;&nbsp;</td>
+        <td id="numerito">[1]&nbsp;&nbsp;&nbsp;</td>
         <td align="justify"><a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a> and <b>P. Vega</b>: <a href="https://patrickvega.github.io/" target="_blank"><em>Frequency-explicit a posteriori error estimates for finite element discretizations of Maxwell’s equations</em></a> (2020).</td>
     </tr>
 </table>
