--- a/pages/my_thesis.html
+++ b/pages/my_thesis.html
@@ -65,7 +65,7 @@
     <tr>
         <td align="right"><strong>Adviser</strong></td>
         <td></td>
-        <td align="left"><a href="http://www.ing-mat.udec.cl/~rodolfo" target="_blank">Rodolfo Rodríguez and Frank Sanhueza.</a></td>
+        <td align="left"><a href="http://www.ing-mat.udec.cl/~rodolfo" target="_blank">Rodolfo Rodríguez</a> and Frank Sanhueza.</td>
     </tr>
     <tr>
         <td align="right"><strong>Status</strong></td>
