--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
             </li>
 	    <li><a>Talks</a>
             <ul>
-                <li><a href="#" onclick="frames(6)">2019</a></li>
+                <li><a href="#" onclick="frames(10)”>2020</a></li>
+		 <li><a href="#" onclick="frames(6)">2019</a></li>
                 <li><a href="#" onclick="frames(7)">2018</a></li>
                 <li><a href="#" onclick="frames(8)">2017</a></li>
 		 <li><a href="#" onclick="frames(9)">2016</a></li>
