--- a/pages/2020.html
+++ b/pages/2020.html
@@ -28,7 +28,7 @@
 
 <table>
     <tr valign="top">
-        <td id="numero”>[11]&nbsp;&nbsp;&nbsp;</td>
+        <td id="numero">[11]&nbsp;&nbsp;&nbsp;</td>
         <td align="justify"><a href=""><em>Frequency-explicit a posteriori error estimates for finite element discretizations of Maxwell’s equations </em></a> (co-authors: <a href="https://tchaumont.github.io/" target="_blank">T. Chaumont-Frelet</a>). Atlantis Online Seminar,<a href="http://www-sop.inria.fr/atlantis/" target="_blank">Atlantis project-team</a>. Inria Sophia Antipolis-Méditerranée, France, November 9, 2020.
         </td>
     </tr>
