--- a/pages/2020.html
+++ b/pages/2020.html
@@ -19,7 +19,7 @@
 <table>
     <tr valign="top">
         <td id="numero">[12]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="https://math.unice.fr/~cscheid/seminaire/index.php?l=c" target="_blank"><em>Frequency-explicit a posteriori error estimates for finite element discretizations of Maxwell’s equations </em></a> (co-authors: <a href="https://tchaumont.github.io/" target="_blank">T. Chaumont-Frelet</a>). <a href="https://math.unice.fr/laboratoire/pr%c3%a9sentation-du-laboratoire.html" target="_blank">Séminaire de l’équipe EDP et Analyse Numérique</a>. Laboratoire J. A. Dieudonné, Université Côte d’Azur, Nice, France, November 26, 2020.
+        <td align="justify"><a href="" target="_blank"><em>Frequency-explicit a posteriori error estimates for finite element discretizations of Maxwell’s equations </em></a> (co-authors: <a href="https://tchaumont.github.io/" target="_blank">T. Chaumont-Frelet</a>). <a href="https://math.unice.fr/~cscheid/seminaire/index.php?l=c target="_blank">Séminaire de l’équipe EDP et Analyse Numérique</a>. Laboratoire J. A. Dieudonné, Université Côte d’Azur, Nice, France, November 26, 2020.
         </td>
     </tr>
 </table>
@@ -29,7 +29,7 @@
 <table>
     <tr valign="top">
         <td id="numero">[11]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="http://www-sop.inria.fr/atlantis/"><em>Frequency-explicit a posteriori error estimates for finite element discretizations of Maxwell’s equations </em></a> (co-authors: <a href="https://tchaumont.github.io/" target="_blank">T. Chaumont-Frelet</a>). Atlantis Online Seminar,<a href="http://www-sop.inria.fr/atlantis/" target="_blank">Atlantis project-team</a>. Inria Sophia Antipolis-Méditerranée, France, November 9, 2020.
+        <td align="justify"><a href=""><em>Frequency-explicit a posteriori error estimates for finite element discretizations of Maxwell’s equations </em></a> (co-authors: <a href="https://tchaumont.github.io/" target="_blank">T. Chaumont-Frelet</a>). Atlantis Online Seminar, Atlantis project-team</a>. Inria Sophia Antipolis-Méditerranée, France, November 9, 2020.
         </td>
     </tr>
 </table>
