--- a/pages/2016.html
+++ b/pages/2016.html
@@ -19,7 +19,7 @@
 <table>
     <tr valign="top">
         <td id="numero">[2]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="https://www.ci2ma.udec.cl/pvega/data/Vega-Patrick-Matematica_Aplicada_y_Analisis_Numerico-JMZS_2016_eng.pdf" target="_blank"><em>A high order HDG
+        <td align="justify"><a href="https://patrickvega.github.io/data/Vega-Patrick-Matematica_Aplicada_y_Analisis_Numerico-JMZS_2016_eng.pdf" target="_blank"><em>A high order HDG
 method for curved-interface problems</em></a> (co-authors: <a href="http://www6.cityu.edu.hk/ma/people/profile/qiuf.htm" target="_blank">W. Qiu</a> and <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a>). <a href="http://www.ci2ma.udec.cl/eventos/noticias/noticia.php?id=168" target="_blank">XXIX Jornada de Matemática de la Zona Sur</a>. Sesión Temática de Matemática Aplicada y Análisis Numérico. Universidad de Talca, Santa Cruz, Chile, April 21 - 23, 2016.
         </td>
     </tr>
@@ -30,7 +30,7 @@ method for curved-interface problems</em></a> (co-authors: <a href="http://www6.
 <table>
     <tr valign="top">
         <td id="numero">[1]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="https://www.ci2ma.udec.cl/pvega/data/Abstract_curved-interface_WONAPDE_2016.pdf" target="_blank"><em>A high order HDG
+        <td align="justify"><a href="https://patrickvega.github.io/data/Abstract_curved-interface_WONAPDE_2016.pdf" target="_blank"><em>A high order HDG
 method for curved-interface problems</em></a> (co-authors: <a href="http://www6.cityu.edu.hk/ma/people/profile/qiuf.htm" target="_blank">W. Qiu</a> and <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a>). <a href="http://www.ci2ma.udec.cl/wonapde2016/" target="_blank">Fifth Chilean Workshop on Numerical Analysis of Partial Differential Equations, WONAPDE 2016</a>. Minisymposium: Numerical Methods for Interface Problems. Universidad de Concepción, Concepción, Chile, January 11 - 15, 2016.
         </td>
     </tr>
