--- a/pages/2017.html
+++ b/pages/2017.html
@@ -19,7 +19,7 @@
 <table>
     <tr valign="top">
         <td id="numero">[3]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="https://www.ci2ma.udec.cl/pvega/data/Vega-Patrick-Analisis_Numerico_de_Ecuaciones_en_Derivadas_Parciales-COMCA_2017_eng.pdf" target="_blank"><em>A posteriori error estimates for an HDG method for the Stokes problem</em></a> (co-authors: <a href="http://www.ing-mat.udec.cl/~raraya" target="_blank">R. Araya</a> and <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a>). <a href="http://www.ci2ma.udec.cl/eventos/noticias/noticia.php?id=168" target="_blank">XXVI Congreso de Matemática Capricornio, COMCA 2017</a>. Sesión de Análisis Numérico de Ecuaciones en Derivadas Parciales. Universidad de Tarapaca, Arica, Chile, August 2 - 4, 2017.
+        <td align="justify"><a href="https://patrickvega.github.io/data/Vega-Patrick-Analisis_Numerico_de_Ecuaciones_en_Derivadas_Parciales-COMCA_2017_eng.pdf" target="_blank"><em>A posteriori error estimates for an HDG method for the Stokes problem</em></a> (co-authors: <a href="http://www.ing-mat.udec.cl/~raraya" target="_blank">R. Araya</a> and <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a>). <a href="http://www.ci2ma.udec.cl/eventos/noticias/noticia.php?id=168" target="_blank">XXVI Congreso de Matemática Capricornio, COMCA 2017</a>. Sesión de Análisis Numérico de Ecuaciones en Derivadas Parciales. Universidad de Tarapaca, Arica, Chile, August 2 - 4, 2017.
         </td>
     </tr>
 
