--- a/pages/2018.html
+++ b/pages/2018.html
@@ -19,7 +19,7 @@
 <table>
     <tr valign="top">
         <td id="numero">[7]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="https://www.ci2ma.udec.cl/pvega/data/Patrick-Vega-14th-Focus-Seminar.pdf" target="_blank"><em>A posteriori error analysis of HDG methods in fluid mechanics </em></a> (co-authors: <a href="http://www.ing-mat.udec.cl/~raraya" target="_blank">R. Araya</a> and <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a>). <a href="https://www.ci2ma.udec.cl/scripts/ckfinder/userfiles/files/Programme-14th-Focus%20Seminar(1).pdf" target="_blank">14th CI²MA Focus Seminar: 
+        <td align="justify"><a href="https://patrickvega.github.io/data/Patrick-Vega-14th-Focus-Seminar.pdf" target="_blank"><em>A posteriori error analysis of HDG methods in fluid mechanics </em></a> (co-authors: <a href="http://www.ing-mat.udec.cl/~raraya" target="_blank">R. Araya</a> and <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a>). <a href="https://www.ci2ma.udec.cl/scripts/ckfinder/userfiles/files/Programme-14th-Focus%20Seminar(1).pdf" target="_blank">14th CI²MA Focus Seminar: 
 Finite Element and Related Methods for PDEs in Continuum Mechanics</a>. Universidad de Concepción, Concepción, Chile, August 27 - 28, 2018.
 
         </td>
@@ -31,7 +31,7 @@ Finite Element and Related Methods for PDEs in Continuum Mechanics</a>. Universi
 <table>
     <tr valign="top">
         <td id="numero">[6]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="https://www.ci2ma.udec.cl/pvega/data/Vega-Patrick_BAIL2018.pdf" target="_blank"><em>An adaptive HDG method for the Brinkman problem </em></a> (co-authors: <a href="http://www.ing-mat.udec.cl/~raraya" target="_blank">R. Araya</a> and <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a>). <a href="https://bail.org.uk/" target="_blank">International Conference on
+        <td align="justify"><a href="https://patrickvega.github.io/data/Vega-Patrick_BAIL2018.pdf" target="_blank"><em>An adaptive HDG method for the Brinkman problem </em></a> (co-authors: <a href="http://www.ing-mat.udec.cl/~raraya" target="_blank">R. Araya</a> and <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a>). <a href="https://bail.org.uk/" target="_blank">International Conference on
 Boundary and Interior Layers, BAIL 2018</a>. University of Strathclyde, Glasgow, UK, June 18 - 22, 2018.
 
         </td>
@@ -54,7 +54,7 @@ Boundary and Interior Layers, BAIL 2018</a>. University of Strathclyde, Glasgow,
 <table>
     <tr valign="top">
         <td id="numero">[4]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="https://www.ci2ma.udec.cl/pvega/data/Vega-Patrick-Analisis_Numerico-JMZS_2018_eng.pdf" target="_blank"><em>A posteriori error analysis of an HDG method for the Oseen problem</em></a> (co-authors: <a href="http://www.ing-mat.udec.cl/~raraya" target="_blank">R. Araya</a> and <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a>). <a href="http://www.jmzs2018.cl/" target="_blank">XXXI Jornada de Matemática de la Zona Sur</a>. Sesión Temática de Análisis Numérico. Universidad Austral de Chile, Valdivia, Chile, April 25 - 27, 2018.
+        <td align="justify"><a href="https://patrickvega.github.io/data/Vega-Patrick-Analisis_Numerico-JMZS_2018_eng.pdf" target="_blank"><em>A posteriori error analysis of an HDG method for the Oseen problem</em></a> (co-authors: <a href="http://www.ing-mat.udec.cl/~raraya" target="_blank">R. Araya</a> and <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a>). <a href="http://www.jmzs2018.cl/" target="_blank">XXXI Jornada de Matemática de la Zona Sur</a>. Sesión Temática de Análisis Numérico. Universidad Austral de Chile, Valdivia, Chile, April 25 - 27, 2018.
 
         </td>
     </tr>
