--- a/pages/2019.html
+++ b/pages/2019.html
@@ -41,7 +41,7 @@ methods </em></a> (co-authors: <a href="http://www.ing-mat.udec.cl/~raraya" targ
 <table>
     <tr valign="top">
         <td id="numero">[8]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="https://www.ci2ma.udec.cl/pvega/data/abstract-wonapde-2019.pdf" target="_blank"><em>A posteriori error analysis of HDG
+        <td align="justify"><a href="https://patrickvega.github.io/data/abstract-wonapde-2019.pdf" target="_blank"><em>A posteriori error analysis of HDG
 methods in fluid mechanics </em></a> (co-authors: <a href="http://www.ing-mat.udec.cl/~raraya" target="_blank">R. Araya</a> and <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a>). <a href="http://www.ci2ma.udec.cl/wonapde2019/" target="_blank">Sixth Chilean Workshop on Numerical Analysis of Partial Differential Equations, WONAPDE 2019</a>. Minisymposium: Discontinuous Galerkin Approximations: Building Bridges Between Theory and Applications. Universidad de Concepción, Concepción, Chile, January 21 - 25, 2019.
         </td>
     </tr>
