--- a/pages/2020.html
+++ b/pages/2020.html
@@ -29,7 +29,7 @@
 <table>
     <tr valign="top">
         <td id="numero">[11]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="https://patrickvega.github.io/data/talk_Atlantis.pdf"><em>Frequency-explicit a posteriori error estimates for finite element discretizations of Maxwell’s equations </em></a> (co-authors: <a href="https://tchaumont.github.io/" target="_blank">T. Chaumont-Frelet</a>). <a href="http://www-sop.inria.fr/atlantis/" target="_blank">Atlantis Online Seminar</a>. Atlantis project-team, Inria Sophia Antipolis-Méditerranée, France, November 9, 2020.
+        <td align="justify"><a href="https://patrickvega.github.io/data/talk_Atlantis.pdf" target="_blank"><em>Frequency-explicit a posteriori error estimates for finite element discretizations of Maxwell’s equations </em></a> (co-authors: <a href="https://tchaumont.github.io/" target="_blank">T. Chaumont-Frelet</a>). <a href="http://www-sop.inria.fr/atlantis/" target="_blank">Atlantis Online Seminar</a>. Atlantis project-team, Inria Sophia Antipolis-Méditerranée, France, November 9, 2020.
         </td>
     </tr>
 </table>
