--- a/pages/submitted.html
+++ b/pages/submitted.html
@@ -21,7 +21,7 @@
 
 <table>
     <tr valign="top">
-        <td id="numerito">[1]&nbsp;&nbsp;&nbsp;</td>
+        <td id="numerito”>[2]&nbsp;&nbsp;&nbsp;</td>
         <td align="justify"><a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a>, <a href="https://www.researchgate.net/profile/Stephane-Lanteri"  target="_blank">S. Lanteri</a> and <b>P. Vega</b>: <a href="https://hal.archives-ouvertes.fr/hal-02943386" target="_blank"><em>A posteriori error estimates for finite element discretizations of Maxwell’s equations coupled with a non-local hydrodynamic Drude model</em></a> (2021).</td>
     </tr>
 </table>
