--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
     <div id="header">
         <a href=""><h1>PATRICK VEGA</h1></a>
-        <h2 align="left">&nbsp;&nbsp;&nbsp;&nbsp;Postdoctoral Researcher at Atlantis project-team, Inria Sophia Antípolis - Méditerranée</h2>
+        <h2 align="left">&nbsp;&nbsp;&nbsp;&nbsp;Postdoctoral Researcher at the Mathematics Institute of the Pontificia Universidad Católica de Valparaíso</h2>
+		<!--Atlantis project-team, Inria Sophia Antípolis - Méditerranée</h2>
     </div>
   
     <div id="navigation-sup">
