--- a/pages/home.html
+++ b/pages/home.html
@@ -34,11 +34,11 @@
             <br>Electromagnetism</p><br>
             
         <h1>Contact</h1>
-            <p>Atlantis project-team
-            <br>Inria Sophia Antípolis - Méditerranée
-            <br>2004 Route des Lucioles, BP 93
-            <br>06902 Sophia Antípolis Cedex, France
-            <br>email: patrick.vega[at]inria.fr</p><br>
+            <p>MInstituto de Matemáticas
+            <br>Pontificia Universidad Católica de Valparaíso
+            <br>Blanco Viel 596, Cerro Barón
+            <br>06902 Valparaíso, Chile
+            <br>email: patrick.vega[at]pucv.cl</p><br>
            
    
 <!--         <h1>Current Position</h1>
