--- a/pages/home.html
+++ b/pages/home.html
@@ -34,7 +34,7 @@
             <br>Electromagnetism</p><br>
             
         <h1>Contact</h1>
-            <p>MInstituto de Matemáticas
+            <p>Instituto de Matemáticas
             <br>Pontificia Universidad Católica de Valparaíso
             <br>Blanco Viel 596, Cerro Barón
             <br>06902 Valparaíso, Chile
