--- a/pages/home.html
+++ b/pages/home.html
@@ -37,7 +37,7 @@
             <p>Instituto de Matemáticas
             <br>Pontificia Universidad Católica de Valparaíso
             <br>Blanco Viel 596, Cerro Barón
-            <br>06902 Valparaíso, Chile
+            <br>Valparaíso, Chile
             <br>email: patrick.vega[at]pucv.cl</p><br>
            
    
