--- a/pages/2021.html
+++ b/pages/2021.html
@@ -10,7 +10,7 @@
 <table>
     <tr>
         <td width="14%"><h3>&nbsp;</h3></td>  
-        <td width="86%" align="left"><h2>Talks/Posters (2020)</h2></td>
+        <td width="86%" align="left"><h2>Talks/Posters (2021)</h2></td>
     </tr>
 </table>
 
@@ -18,8 +18,8 @@
 
 <table>
     <tr valign="top">
-        <td id="numero">[12]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="https://patrickvega.github.io/data/talk_LJAD.pdf" target="_blank"><em>Frequency-explicit a posteriori error estimates for finite element discretizations of Maxwell’s equations </em></a> (co-authors: <a href="https://tchaumont.github.io/" target="_blank">T. Chaumont-Frelet</a>). <a href="https://math.unice.fr/~cscheid/seminaire/index.php?l=c target="_blank">Séminaire de l’équipe EDP et Analyse Numérique</a>. Laboratoire J. A. Dieudonné, Université Côte d’Azur, Nice, France, November 26, 2020.
+        <td id="numero">[14]&nbsp;&nbsp;&nbsp;</td>
+        <td align="justify"><a href="" target="_blank"><em>Frequency-explicit a posteriori error estimates for finite element discretizations of Maxwell’s equations </em></a> (co-authors: <a href="https://tchaumont.github.io/" target="_blank">T. Chaumont-Frelet</a>). <a href="https://www.jmzs.cl/2020/" target="_blank">XXXIII Jornada de Matemática de la Zona Sur</a>. Sesión Temática de Análisis Numérico. Universidad de La Frontera, Temuco, Chile, April 20 - 24, 2021.
         </td>
     </tr>
 </table>
@@ -28,8 +28,8 @@
 
 <table>
     <tr valign="top">
-        <td id="numero">[11]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="https://patrickvega.github.io/data/talk_Atlantis.pdf" target="_blank"><em>Frequency-explicit a posteriori error estimates for finite element discretizations of Maxwell’s equations </em></a> (co-authors: <a href="https://tchaumont.github.io/" target="_blank">T. Chaumont-Frelet</a>). <a href="http://www-sop.inria.fr/atlantis/" target="_blank">Atlantis Online Seminar</a>. Atlantis project-team, Inria Sophia Antipolis-Méditerranée, France, November 9, 2020.
+        <td id="numero">[13]&nbsp;&nbsp;&nbsp;</td>
+        <td align="justify"><a href="https://sites.google.com/view/ima-numerics/activities/2021/april-9-2021" target="_blank"><em>Frequency-explicit a posteriori error estimates for finite element discretizations of Maxwell’s equations </em></a> (co-authors: <a href="https://tchaumont.github.io/" target="_blank">T. Chaumont-Frelet</a>). <a href="http://ima.ucv.cl/seminarios-permanentes/caleta-numerica/" target="_blank">Caleta Numérica. Seminar on Numerical Analysis and Applied Mathematics at Valparaíso</a>. Institute of Mathematics, Pontificia Universidad Católica de Valparaíso, Valparaíso, Chile, April 9, 2021.
         </td>
     </tr>
 </table>
