--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             </li>
 	    <li><a>Talks</a>
             <ul>
+		<li><a href="#" onclick="frames(11)">2021</a></li>
                 <li><a href="#" onclick="frames(10)">2020</a></li>
 		 <li><a href="#" onclick="frames(6)">2019</a></li>
                 <li><a href="#" onclick="frames(7)">2018</a></li>
