--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <div id="navigation-sup">
         <ul>
             <li id="lihome"><a href="#" onclick="frames(1)"><p>HOME</p></a></li>
-            <!--<li><a href="http://www.icm.udec.cl" target="_blank">ICM - UDEC</a></li>-->
+            <li><a href="http://ima.ucv.cl/" target="_blank">IMA - PUCV</a></li>
 	    <li><a href="http://www-sop.inria.fr/atlantis/" target="_blank">ATLANTIS PROJECT-TEAM - INRIA</a></li>
             <li><a href="http://www.ci2ma.udec.cl/english.php" target="_blank">CI&sup2;MA - UDEC</a></li>
             <!--<li><a href="http://www.photom.lncc.br/index.html" target="_blank">PHOTOM (Math/Amsud Program)</a></li>-->
-            <li><a href="https://www.icm.udec.cl/" target="_blank">MATHEMATICAL ENGINEERING - UDEC (in spanish)</a></li>
+            <!--<li><a href="https://www.icm.udec.cl/" target="_blank">MATHEMATICAL ENGINEERING - UDEC (in spanish)</a></li>-->
         </ul>        
     </div>
     
@@ -66,7 +66,7 @@
             </li>
 	    <li><a>Talks</a>
             <ul>
-		<li><a href="#" onclick="frames(11)">2021</a></li>
+		<li><a href="#" onclick="frames(12)">2021</a></li>
                 <li><a href="#" onclick="frames(10)">2020</a></li>
 		 <li><a href="#" onclick="frames(6)">2019</a></li>
                 <li><a href="#" onclick="frames(7)">2018</a></li>
