--- a/pages/published.html
+++ b/pages/published.html
@@ -21,7 +21,7 @@
 <table>
     <tr valign="top">
         <td id="numerito">[4]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a>, <a href="https://www.researchgate.net/profile/Stephane-Lanteri" target="_blank">S. Lanteri</a> and <b>P. Vega</b>: <a href="https://www.sciencedirect.com/science/article/abs/pii/S0045782521003339" target="_blank"><em>A posteriori error estimates for finite element discretizations of Maxwell’s equations coupled with a non-local hydrodynamic Drude model</em></a>. <b>Computer Methods in Applied Mechanics and Engineering</b> 385 (2021) 114002.</td>
+        <td align="justify"><a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a>, <a href="https://www.researchgate.net/profile/Stephane-Lanteri" target="_blank">S. Lanteri</a> and <b>P. Vega</b>: <a href="https://www.sciencedirect.com/science/article/abs/pii/S0045782521003339" target="_blank"><em>A posteriori error estimates for finite element discretizations of Maxwell’s equations coupled with a non-local hydrodynamic Drude model</em></a>. <b>Computer Methods in Applied Mechanics and Engineering</b>, vol. 385, 114002 (2021).</td>
     </tr>
 </table>
 
