--- a/pages/published.html
+++ b/pages/published.html
@@ -17,6 +17,15 @@
 </table>
 
 <br>
+ 
+<table>
+    <tr valign="top">
+        <td id="numerito">[5]&nbsp;&nbsp;&nbsp;</td>
+        <td align="justify"><a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a> and <b>P. Vega</b>: <a href="https://hal.archives-ouvertes.fr/hal-02943386" target="_blank"><em>Frequency-explicit a posteriori error estimates for finite element discretizations of Maxwell’s equations</em></a>. <b>SIAM Journal on Numerical Analysis</b>, accepted for publication (2022).</td>
+    </tr>
+</table>
+
+<br>
     
 <table>
     <tr valign="top">
