--- a/pages/submitted.html
+++ b/pages/submitted.html
@@ -19,11 +19,11 @@
 
 <br>
 
-<table>
+<!--<table>
     <tr valign="top">
         <td id="numerito">[6]&nbsp;&nbsp;&nbsp;</td>
         <td align="justify"><a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a> and <b>P. Vega</b>: <a href="https://hal.archives-ouvertes.fr/hal-03221188" target="_blank"><em>Frequency-explicit approximability estimates for finite element discretizations of Maxwell’s equations</em></a> (2021).</td>
     </tr>
-</table>
+</table>-->
 
 </body>
