--- a/pages/published.html
+++ b/pages/published.html
@@ -17,7 +17,16 @@
 </table>
 
 <br>
- 
+
+<table>
+<tr valign="top">
+        <td id="numerito">[6]&nbsp;&nbsp;&nbsp;</td>
+        <td align="justify"><a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a> and <b>P. Vega</b>: <a href="https://hal.archives-ouvertes.fr/hal-03221188" target="_blank"><em>Frequency-explicit approximability estimates for finite element discretizations of Maxwell’s equations</em></a>. <b>Calcolo</b>, accepted for publication (2022).</td>
+    </tr>
+</table>
+
+<br>
+    
 <table>
     <tr valign="top">
         <td id="numerito">[5]&nbsp;&nbsp;&nbsp;</td>
