--- a/pages/published.html
+++ b/pages/published.html
@@ -21,7 +21,7 @@
 <table>
     <tr valign="top">
         <td id="numerito">[6]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a> and <b>P. Vega</b>: <a href="https://hal.archives-ouvertes.fr/hal-02943386" target="_blank"><em>Frequency-explicit a posteriori error estimates for finite element discretizations of Maxwell’s equations</em></a>. <b>SIAM Journal on Numerical Analysis</b>, accepted for publication (2022).</td>
+        <td align="justify"><a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a> and <b>P. Vega</b>: <a href="https://hal.archives-ouvertes.fr/hal-02943386" target="_blank"><em>Frequency-explicit a posteriori error estimates for finite element discretizations of Maxwell’s equations</em></a>. <b>SIAM Journal on Numerical Analysis</b>, vol. 60, pp. 1774-1798 (2022).</td>
     </tr>
 </table>
     
