--- a/pages/submitted.html
+++ b/pages/submitted.html
@@ -21,8 +21,17 @@
 
 <table>
     <tr valign="top">
+        <td id="numerito">[8]&nbsp;&nbsp;&nbsp;</td>
+        <td align="justify"><a href="http://ima.ucv.cl/academicos/ignacio-muga/"  target="_blank">I. Muga</a>, <a href="https://scholar.google.com/citations?hl=es&user=8pYjH_QAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">S. Rojas</a> and <b>P. Vega</b>: <a href="https://arxiv.org/abs/2210.00390" target="_blank"><em>An adaptive superconvergent finite element method based on local residual minimization</em></a> (2022).</td>
+    </tr>
+</table>
+    
+<br>    
+    
+<table>
+    <tr valign="top">
         <td id="numerito">[7]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a> and <b>P. Vega</b>: <a href="https://hal.archives-ouvertes.fr/hal-03744230" target="_blank"><em>Frequency-explicit a posteriori error estimates for discontinuous Galerkin discretizations of Maxwell’s equations</em></a> (2022).</td>
+        <td align="justify"><a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a> and <b>P. Vega</b>: <a href="https://arxiv.org/abs/2208.01475" target="_blank"><em>Frequency-explicit a posteriori error estimates for discontinuous Galerkin discretizations of Maxwell’s equations</em></a> (2022).</td>
     </tr>
 </table>
 
