--- a/pages/2021.html
+++ b/pages/2021.html
@@ -19,7 +19,7 @@
 <table>
     <tr valign="top">
         <td id="numero">[15]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="https://www.dropbox.com/s/x7pk199o1hvu4mc/analisis%20numerico.pdf?dl=0" target="_blank"><em>Frequency-explicit a posteriori error estimates for finite element discretizations of Maxwell’s equations </em></a> (co-authors: <a href="https://tchaumont.github.io/" target="_blank">T. Chaumont-Frelet</a>). <a href="https://www.jmzs.cl/2020/" target="_blank">XXXIII Jornada de Matemática de la Zona Sur</a>. Sesión Temática de Análisis Numérico. Universidad de La Frontera, Temuco, Chile, April 20 - 24, 2021.
+        <td align="justify"><a href="http://ima.ucv.cl/congreso/sm2021/" target="_blank"><em>Estimaciones de error \textit{a posteriori}: motivación y aplicación a propagación de ondas electromagnéticas de alta frecuencia </em></a>s. <a href="http://ima.ucv.cl/congreso/sm2021/" target="_blank">XLVII Semana de la Matemática</a>. Pontificia Universidad Católica de Valparaíso, Valparaíso, Chile, Octubre 6 - 8, 2021.
         </td>
     </tr>
 </table>
