--- a/pages/2021.html
+++ b/pages/2021.html
@@ -19,7 +19,7 @@
 <table>
     <tr valign="top">
         <td id="numero">[15]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="http://ima.ucv.cl/congreso/sm2021/" target="_blank"><em>Estimaciones de error \textit{a posteriori}: motivación y aplicación a propagación de ondas electromagnéticas de alta frecuencia</em></a>. <a href="http://ima.ucv.cl/congreso/sm2021/" target="_blank">XLVII Semana de la Matemática</a>. Pontificia Universidad Católica de Valparaíso, Valparaíso, Chile, Octubre 6 - 8, 2021.
+        <td align="justify"><a href="http://ima.ucv.cl/congreso/sm2021/" target="_blank"><em>Estimaciones de error a posteriori: motivación y aplicación a propagación de ondas electromagnéticas de alta frecuencia</em></a>. <a href="http://ima.ucv.cl/congreso/sm2021/" target="_blank">XLVII Semana de la Matemática</a>. Pontificia Universidad Católica de Valparaíso, Valparaíso, Chile, Octubre 6 - 8, 2021.
         </td>
     </tr>
 </table>
