--- a/pages/submitted.html
+++ b/pages/submitted.html
@@ -21,6 +21,15 @@
 
 <table>
     <tr valign="top">
+        <td id="numerito">[9]&nbsp;&nbsp;&nbsp;</td>
+        <td align="justify">C. Uriarte, J. M. Taylor, <a href="https://www.ikerbasque.net/david-pardo"  target="_blank">D. Pardo</a>, O. A. Rodríguez, and <b>P. Vega</b>: <a href="" target="_blank"><em>Memory-based Monte Carlo integration for solving partial differential equations using neural networks</em></a> (2023).</td>
+    </tr>
+</table>
+    
+<br>
+
+<table>
+    <tr valign="top">
         <td id="numerito">[8]&nbsp;&nbsp;&nbsp;</td>
         <td align="justify"><a href="http://ima.ucv.cl/academicos/ignacio-muga/"  target="_blank">I. Muga</a>, <a href="https://scholar.google.com/citations?hl=es&user=8pYjH_QAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">S. Rojas</a> and <b>P. Vega</b>: <a href="https://arxiv.org/abs/2210.00390" target="_blank"><em>An adaptive superconvergent finite element method based on local residual minimization</em></a> (2022).</td>
     </tr>
