--- a/pages/submitted.html
+++ b/pages/submitted.html
@@ -22,7 +22,7 @@
 <table>
     <tr valign="top">
         <td id="numerito">[9]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify">C. Uriarte, J. M. Taylor, <a href="https://www.ikerbasque.net/david-pardo"  target="_blank">D. Pardo</a>, O. A. Rodríguez, and <b>P. Vega</b>: <a href="" target="_blank"><em>Memory-based Monte Carlo integration for solving partial differential equations using neural networks</em></a> (2023).</td>
+        <td align="justify">C. Uriarte, <a href="https://www.cunef.edu/claustro/taylor-jamie-michael/"  target="_blank">J. M. Taylor</a>, <a href="https://www.ikerbasque.net/david-pardo"  target="_blank">D. Pardo</a>, O. A. Rodríguez, and <b>P. Vega</b>: <a href="" target="_blank"><em>Memory-based Monte Carlo integration for solving partial differential equations using neural networks</em></a> (2023).</td>
     </tr>
 </table>
     
