--- a/pages/submitted.html
+++ b/pages/submitted.html
@@ -21,7 +21,7 @@
 
 <table>
     <tr valign="top">
-        <td id="numerito">[10]&nbsp;&nbsp;&nbsp;</td>
+        <td id="numerito">[10]&nbsp;&nbsp;</td>
         <td align="justify">L. Camargo, <a href="https://scholar.google.com/citations?hl=es&user=8pYjH_QAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">S. Rojas</a> and <b>P. Vega</b>: <em>Minimum-residual a posteriori error estimates for a hybridizable discontinuous Galerkin discretization of the Helmholtz equation</em></a> (2023).</td>
     </tr>
 </table>
@@ -31,7 +31,7 @@
 <table>
     <tr valign="top">
         <td id="numerito">[9]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"> C. Uriarte, <a href="https://www.cunef.edu/claustro/taylor-jamie-michael/"  target="_blank">J. M. Taylor</a>, <a href="https://www.ikerbasque.net/david-pardo"  target="_blank">D. Pardo</a>, O. A. Rodríguez, and <b>P. Vega</b>: <em>Memory-based Monte Carlo integration for solving partial differential equations using neural networks</em></a> (2023).</td>
+        <td align="justify">C. Uriarte, <a href="https://www.cunef.edu/claustro/taylor-jamie-michael/"  target="_blank">J. M. Taylor</a>, <a href="https://www.ikerbasque.net/david-pardo"  target="_blank">D. Pardo</a>, O. A. Rodríguez, and <b>P. Vega</b>: <em>Memory-based Monte Carlo integration for solving partial differential equations using neural networks</em></a> (2023).</td>
     </tr>
 </table>
     
