--- a/pages/submitted.html
+++ b/pages/submitted.html
@@ -21,7 +21,7 @@
 
 <table>
     <tr valign="top">
-        <td id="numerito">[10]&nbsp;&nbsp;&nbsp;</td>
+        <td id="numerito">[10]&nbsp;&nbsp;</td>
         <td align="justify">L. Camargo, <a href="https://scholar.google.com/citations?hl=es&user=8pYjH_QAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">S. Rojas</a> and <b>P. Vega</b>: <em>Minimum-residual a posteriori error estimates for a hybridizable discontinuous Galerkin discretization of the Helmholtz equation</em></a> (2023).</td>
     </tr>
 </table>
