--- a/pages/published.html
+++ b/pages/published.html
@@ -21,7 +21,7 @@
 <table>
     <tr valign="top">
         <td id="numerito">[6]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a> and <b>P. Vega</b>: <a href="https://epubs.siam.org/doi/abs/10.1137/21M1421805" target="_blank"><em>Frequency-explicit a posteriori error estimates for finite element discretizations of Maxwell’s equations</em></a>. <b>SIAM Journal on Numerical Analysis</b>, vol. 60, pp. 1774-1798 (2022).</td>
+        <td align="justify">&nbsp;<a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a> and <b>P. Vega</b>: <a href="https://epubs.siam.org/doi/abs/10.1137/21M1421805" target="_blank"><em>Frequency-explicit a posteriori error estimates for finite element discretizations of Maxwell’s equations</em></a>. <b>SIAM Journal on Numerical Analysis</b>, vol. 60, pp. 1774-1798 (2022).</td>
     </tr>
 </table>
     
@@ -30,7 +30,7 @@
 <table>
 <tr valign="top">
         <td id="numerito">[5]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a> and <b>P. Vega</b>: <a href="https://link.springer.com/article/10.1007/s10092-022-00464-7" target="_blank"><em>Frequency-explicit approximability estimates for finite element discretizations of Maxwell’s equations</em></a>. <b>Calcolo</b>, vol. 59, 22 (2022).</td>
+        <td align="justify">&nbsp;<a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a> and <b>P. Vega</b>: <a href="https://link.springer.com/article/10.1007/s10092-022-00464-7" target="_blank"><em>Frequency-explicit approximability estimates for finite element discretizations of Maxwell’s equations</em></a>. <b>Calcolo</b>, vol. 59, 22 (2022).</td>
     </tr>
 </table>
 
@@ -39,7 +39,7 @@
 <table>
     <tr valign="top">
         <td id="numerito">[4]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a>, <a href="https://www.researchgate.net/profile/Stephane-Lanteri" target="_blank">S. Lanteri</a> and <b>P. Vega</b>: <a href="https://www.sciencedirect.com/science/article/abs/pii/S0045782521003339" target="_blank"><em>A posteriori error estimates for finite element discretizations of Maxwell’s equations coupled with a non-local hydrodynamic Drude model</em></a>. <b>Computer Methods in Applied Mechanics and Engineering</b>, vol. 385, 114002 (2021).</td>
+        <td align="justify">&nbsp;<a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a>, <a href="https://www.researchgate.net/profile/Stephane-Lanteri" target="_blank">S. Lanteri</a> and <b>P. Vega</b>: <a href="https://www.sciencedirect.com/science/article/abs/pii/S0045782521003339" target="_blank"><em>A posteriori error estimates for finite element discretizations of Maxwell’s equations coupled with a non-local hydrodynamic Drude model</em></a>. <b>Computer Methods in Applied Mechanics and Engineering</b>, vol. 385, 114002 (2021).</td>
     </tr>
 </table>
 
@@ -48,7 +48,7 @@
 <table>
     <tr valign="top">
         <td id="numerito">[3]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="http://www.ing-mat.udec.cl/~raraya"  target="_blank">R. Araya</a>, <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a> and <b>P. Vega</b>: <a href="https://www.sciencedirect.com/science/article/pii/S0168927419301898" target="_blank"><em>A posteriori error analysis of an HDG method for the Oseen problem</em></a>. <b>Applied Numerical Mathematics</b>, vol. 146, pp. 291-308 (2019).</td>
+        <td align="justify">&nbsp;<a href="http://www.ing-mat.udec.cl/~raraya"  target="_blank">R. Araya</a>, <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a> and <b>P. Vega</b>: <a href="https://www.sciencedirect.com/science/article/pii/S0168927419301898" target="_blank"><em>A posteriori error analysis of an HDG method for the Oseen problem</em></a>. <b>Applied Numerical Mathematics</b>, vol. 146, pp. 291-308 (2019).</td>
     </tr>
 </table>
 
@@ -57,7 +57,7 @@
 <table>
     <tr valign="top">
         <td id="numerito">[2]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="http://www.ing-mat.udec.cl/~raraya"  target="_blank">R. Araya</a>, <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a> and <b>P. Vega</b>: <a href="https://academic.oup.com/imajna/article-abstract/39/3/1502/5032331" target="_blank"><em>Analysis of an adaptive HDG method for the Brinkman problem</em></a>. <b>IMA Journal of Numerical Analysis</b>, vol. 39, 3, pp. 1502-1528 (2019).</td>
+        <td align="justify">&nbsp;<a href="http://www.ing-mat.udec.cl/~raraya"  target="_blank">R. Araya</a>, <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a> and <b>P. Vega</b>: <a href="https://academic.oup.com/imajna/article-abstract/39/3/1502/5032331" target="_blank"><em>Analysis of an adaptive HDG method for the Brinkman problem</em></a>. <b>IMA Journal of Numerical Analysis</b>, vol. 39, 3, pp. 1502-1528 (2019).</td>
     </tr>
 </table>
 
@@ -66,7 +66,7 @@
 <table>
     <tr valign="top">
         <td id="numerito">[1]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="http://www6.cityu.edu.hk/ma/people/profile/qiuf.htm" target="_blank">W. Qiu</a>, <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a> and <b>P. Vega</b>: <a href="https://link.springer.com/article/10.1007/s10915-016-0239-0" target="_blank"><em>A high order HDG method for curved-interface problems via approximation from straight triangulations</em></a>. <b>Journal of Scientific Computing</b>, vol. 69, 3, pp. 1384-1407 (2016).</td>
+        <td align="justify">&nbsp;<a href="http://www6.cityu.edu.hk/ma/people/profile/qiuf.htm" target="_blank">W. Qiu</a>, <a href="http://www.ing-mat.udec.cl/~msolano" target="_blank">M. Solano</a> and <b>P. Vega</b>: <a href="https://link.springer.com/article/10.1007/s10915-016-0239-0" target="_blank"><em>A high order HDG method for curved-interface problems via approximation from straight triangulations</em></a>. <b>Journal of Scientific Computing</b>, vol. 69, 3, pp. 1384-1407 (2016).</td>
     </tr>
 </table>
 
