--- a/pages/submitted.html
+++ b/pages/submitted.html
@@ -31,7 +31,7 @@
 <table>
     <tr valign="top">
         <td id="numerito">[9]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify">&nbsp;C. Uriarte, <a href="https://www.cunef.edu/claustro/taylor-jamie-michael/"  target="_blank">J. M. Taylor</a>, <a href="https://www.ikerbasque.net/david-pardo"  target="_blank">D. Pardo</a>, O. A. Rodríguez, and <b>P. Vega</b>: <em>Memory-based Monte Carlo integration for solving &nbsp;partial differential equations using neural networks</em></a> (2023).</td>
+        <td align="justify">&nbsp;C. Uriarte, <a href="https://www.cunef.edu/claustro/taylor-jamie-michael/"  target="_blank">J. M. Taylor</a>, <a href="https://www.ikerbasque.net/david-pardo"  target="_blank">D. Pardo</a>, O. A. Rodríguez, and <b>P. Vega</b>: <em>Memory-based Monte Carlo integration for solving &nbsp;&nbsp;partial differential equations using neural networks</em></a> (2023).</td>
     </tr>
 </table>
     
@@ -40,7 +40,7 @@
 <table>
     <tr valign="top">
         <td id="numerito">[8]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify">&nbsp;<a href="http://ima.ucv.cl/academicos/ignacio-muga/"  target="_blank">I. Muga</a>, <a href="https://scholar.google.com/citations?hl=es&user=8pYjH_QAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">S. Rojas</a> and <b>P. Vega</b>: <a href="https://arxiv.org/abs/2210.00390" target="_blank"><em>An adaptive superconvergent finite element method based on local residual &nbsp;minimization</em></a> (2022).</td>
+        <td align="justify">&nbsp;<a href="http://ima.ucv.cl/academicos/ignacio-muga/"  target="_blank">I. Muga</a>, <a href="https://scholar.google.com/citations?hl=es&user=8pYjH_QAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">S. Rojas</a> and <b>P. Vega</b>: <a href="https://arxiv.org/abs/2210.00390" target="_blank"><em>An adaptive superconvergent finite element method based on local residual &nbsp;&nbsp;minimization</em></a> (2022).</td>
     </tr>
 </table>
     
@@ -49,7 +49,7 @@
 <table>
     <tr valign="top">
         <td id="numerito">[7]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify">&nbsp;<a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a> and <b>P. Vega</b>: <a href="https://arxiv.org/abs/2208.01475" target="_blank"><em>Frequency-explicit a posteriori error estimates for discontinuous Galerkin &nbsp;discretizations of Maxwell’s equations</em></a> (2022).</td>
+        <td align="justify">&nbsp;<a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a> and <b>P. Vega</b>: <a href="https://arxiv.org/abs/2208.01475" target="_blank"><em>Frequency-explicit a posteriori error estimates for discontinuous Galerkin &nbsp;&nbsp;discretizations of Maxwell’s equations</em></a> (2022).</td>
     </tr>
 </table>
 
