--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+<meta name="google-site-verification" content="FP3vTFLdYDu6sBnlr6J1kaBF_yBBqiyDCjxcSvrh2Hg" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title> &nbsp; Patrick Vega</title>
     <meta name="author" content="Patrick Vega" />
