--- a/pages/published.html
+++ b/pages/published.html
@@ -17,6 +17,15 @@
 </table>
 
 <br>
+
+<table>
+    <tr valign="top">
+        <td id="numerito">[7]&nbsp;&nbsp;&nbsp;</td>
+        <td align="justify">&nbsp;<a href="http://ima.ucv.cl/academicos/ignacio-muga/"  target="_blank">I. Muga</a>, <a href="https://scholar.google.com/citations?hl=es&user=8pYjH_QAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">S. Rojas</a> and <b>P. Vega</b>: <a href="https://arxiv.org/abs/2210.00390" target="_blank"><em>An adaptive superconvergent mixed finite element method based on local residual &nbsp;&nbsp;minimization</em></a>. <b>SIAM Journal on Numerical Analysis</b>, accepted for publication (2023).</td>
+    </tr>
+</table>
+    
+<br> 
     
 <table>
     <tr valign="top">
