--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <li><a href="#" onclick="frames(13)">Linux & Software</a></li>
             </ul>
             </li>-->
-            <li><a href="http://www.genealogy.ams.org/id.php?id=242454" target="_blank">Math Genealogy</a></li>
+            <li><a href="https://www.webofscience.com/wos/author/record/3874698" target="_blank">Web of Science</a></li>
         </ul>
     </div>
   
@@ -110,7 +110,7 @@
     <div id="footer">
         Powered by
         <span style="-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1); display: inline-block;"> &copy; </span> <a href=""> Patrick Vega</a>
-	<br>Last Update: March 28, 2022
+	<br>Last Update: May 4, 2023
     </div>
 </div>
 </center>
