--- a/pages/home.html
+++ b/pages/home.html
@@ -17,7 +17,7 @@
         <h1>Education</h1>
             <p>Doctor en Ciencias Aplicadas c/m Ingeniería Matemática
 	    <br>(Ph.D in Applied Mathematics) 
-            <br>Universidad de Concepción, Concepción, Chile, December 2018.
+            <br>Universidad de Concepción, Concepción, Chile, Dec. 2018.
             <br><br>Ingeniero Civil Matemático
             <br>(Mathematical Engineer) 
             <br>Universidad de Concepción, Concepción, Chile, March 2014.
@@ -27,9 +27,11 @@
     
         <h1>Research Interests</h1>
             <p>Numerical analysis of partial differential equations 
-            <br>Finite element methods
+            <br>Finite element methods (FEMs)
             <br>Discontinuous Galerkin methods
+	    <br>Minimum residual FEMs
             <br><i>A posteriori</i> error analysis
+	    <br>Optimization of FEMs using neural networks
             <br>Fluid mechanics
             <br>Electromagnetism</p><br>
             
