--- a/pages/published.html
+++ b/pages/published.html
@@ -21,7 +21,7 @@
 <table>
     <tr valign="top">
         <td id="numerito">[8]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify">&nbsp;<a href="http://ima.ucv.cl/academicos/ignacio-muga/"  target="_blank">I. Muga</a>, <a href="https://scholar.google.com/citations?hl=es&user=8pYjH_QAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">S. Rojas</a> and <b>P. Vega</b>: <a href="https://arxiv.org/abs/2210.00390" target="_blank"><em>An adaptive superconvergent mixed finite element method based on local residual &nbsp;&nbsp;minimization</em></a>. <b>SIAM Journal on Numerical Analysis</b>, accepted for publication (2023).</td>
+        <td align="justify">&nbsp;<a href="http://ima.ucv.cl/academicos/ignacio-muga/"  target="_blank">I. Muga</a>, <a href="https://scholar.google.com/citations?hl=es&user=8pYjH_QAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">S. Rojas</a> and <b>P. Vega</b>: <a href="https://arxiv.org/abs/2210.00390" target="_blank"><em>An adaptive superconvergent mixed finite element method based on local residual minimization</em></a>. <b>SIAM Journal on Numerical Analysis</b>, accepted for publication (2023).</td>
     </tr>
 </table>
 
@@ -30,7 +30,7 @@
 <table>
     <tr valign="top">
         <td id="numerito">[7]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify">&nbsp;C. Uriarte, <a href="https://www.cunef.edu/claustro/taylor-jamie-michael/"  target="_blank">J. M. Taylor</a>, <a href="https://www.ikerbasque.net/david-pardo"  target="_blank">D. Pardo</a>, O. A. Rodríguez, and <b>P. Vega</b>: <a href="https://link.springer.com/chapter/10.1007/978-3-031-36021-3_51" target="_blank"><em>Memory-based Monte Carlo integration for solving &nbsp;&nbsp;partial differential equations using neural networks</em></a>. <b>Computational Science – ICCS 2023</b>. Part II, 509-516. Lecture Notes in Computer Science, vol. 14074. Springer, Cham (2023).</td>
+        <td align="justify">&nbsp;C. Uriarte, <a href="https://www.cunef.edu/claustro/taylor-jamie-michael/"  target="_blank">J. M. Taylor</a>, <a href="https://www.ikerbasque.net/david-pardo"  target="_blank">D. Pardo</a>, O. A. Rodríguez, and <b>P. Vega</b>: <a href="https://link.springer.com/chapter/10.1007/978-3-031-36021-3_51" target="_blank"><em>Memory-based Monte Carlo integration for solving partial differential equations using neural networks</em></a>. <b>Computational Science – ICCS 2023</b>. Part II, 509-516. Lecture Notes in Computer Science, vol. 14074. Springer, Cham (2023).</td>
     </tr>
 </table>
     
