--- a/pages/2022.html
+++ b/pages/2022.html
@@ -18,6 +18,26 @@
 
 <table>
     <tr valign="top">
+        <td id="numero">[20]&nbsp;&nbsp;&nbsp;</td>
+        <td align="justify"><a href="" target="_blank"><em>An adaptive superconvergent finite element method based on local residual minimization </em></a> (co-authors: <a href="http://ima.ucv.cl/academicos/ignacio-muga/" target="_blank">I. Muga</a> and <a href="https://scholar.google.com/citations?user=8pYjH_QAAAAJ&hl=es" target="_blank">S. Rojas</a>). <a href="http://www.dmatuls.cl/portal/?page_id=73" target="_blank">Coloquio del Departamento de Matemáticas</a>. Universidad de La Serena, La Serena, Chile, November 2, 2022.
+        </td>
+    </tr>
+</table>
+
+<br>
+    
+<table>
+    <tr valign="top">
+        <td id="numero">[19]&nbsp;&nbsp;&nbsp;</td>
+        <td align="justify"><a href="" target="_blank"><em>An adaptive superconvergent finite element method based on local residual minimization </em></a> (co-authors: <a href="http://ima.ucv.cl/academicos/ignacio-muga/" target="_blank">I. Muga</a> and <a href="https://scholar.google.com/citations?user=8pYjH_QAAAAJ&hl=es" target="_blank">S. Rojas</a>). <a href="http://ima.ucv.cl/congreso/sm2022/" target="_blank">XLVIII Semana de la Matemática.</a>. Sesión Temática de Análisis Numérico. Pontificia Universidad Católica de Valparaíso, Valparaíso, Chile, October 11 - 14, 2022.
+        </td>
+    </tr>
+</table>
+
+<br>
+    
+<table>
+    <tr valign="top">
         <td id="numero">[18]&nbsp;&nbsp;&nbsp;</td>
         <td align="justify"><a href="" target="_blank"><em>An adaptive superconvergent finite element method based on local residual minimization </em></a> (co-authors: <a href="http://ima.ucv.cl/academicos/ignacio-muga/" target="_blank">I. Muga</a> and <a href="https://scholar.google.com/citations?user=8pYjH_QAAAAJ&hl=es" target="_blank">S. Rojas</a>). <a href="http://minres.mat.uc.cl/" target="_blank">Minimum Residual & Least-Squares Finite Element Methods, MINRES/LS-5</a>. Pontificia Universidad Católica de Chile, Santiago, Chile, October 5 - 7, 2022.
         </td>
