--- a/pages/2022.html
+++ b/pages/2022.html
@@ -29,7 +29,7 @@
 <table>
     <tr valign="top">
         <td id="numero">[19]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="" target="_blank"><em>An adaptive superconvergent finite element method based on local residual minimization </em></a> (co-authors: <a href="http://ima.ucv.cl/academicos/ignacio-muga/" target="_blank">I. Muga</a> and <a href="https://scholar.google.com/citations?user=8pYjH_QAAAAJ&hl=es" target="_blank">S. Rojas</a>). <a href="http://ima.ucv.cl/congreso/sm2022/" target="_blank">XLVIII Semana de la Matemática.</a>. Sesión Temática de Análisis Numérico. Pontificia Universidad Católica de Valparaíso, Valparaíso, Chile, October 11 - 14, 2022.
+        <td align="justify"><a href="" target="_blank"><em>An adaptive superconvergent finite element method based on local residual minimization </em></a> (co-authors: <a href="http://ima.ucv.cl/academicos/ignacio-muga/" target="_blank">I. Muga</a> and <a href="https://scholar.google.com/citations?user=8pYjH_QAAAAJ&hl=es" target="_blank">S. Rojas</a>). <a href="http://ima.ucv.cl/congreso/sm2022/" target="_blank">XLVIII Semana de la Matemática</a>. Sesión Temática de Análisis Numérico. Pontificia Universidad Católica de Valparaíso, Valparaíso, Chile, October 11 - 14, 2022.
         </td>
     </tr>
 </table>
