--- a/pages/published.html
+++ b/pages/published.html
@@ -21,7 +21,7 @@
 <table>
     <tr valign="top">
         <td id="numerito">[9]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify">&nbsp;<a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a> and <b>P. Vega</b>: <a href="https://arxiv.org/abs/2208.01475" target="_blank"><em>Frequency-explicit a posteriori error estimates for discontinuous Galerkin discretizations of Maxwell’s equations</em></a>. <b>SIAM Journal on Numerical Analysis</b>, accepted for publication (2023).</td>
+        <td align="left">&nbsp;<a href="https://tchaumont.github.io/"  target="_blank">T. Chaumont-Frelet</a> and <b>P. Vega</b>: <a href="https://arxiv.org/abs/2208.01475" target="_blank"><em>Frequency-explicit a posteriori error estimates for discontinuous Galerkin discretizations of Maxwell’s equations</em></a>. <b>SIAM Journal on Numerical Analysis</b>, accepted for publication (2023).</td>
     </tr>
 </table>
     
